DCWL-4195 | Address PR Bot Comments